--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/last_knight_optimus.webp"
                 alt="Profile Image"
               />
             </div>
