--- a/src/index.html
+++ b/src/index.html
@@ -98,12 +98,12 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">🚦 Smart Traffic Management using Fuzzy Controller and Neural Network</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    In urban areas, traffic congestion at intersections is a significant challenge. 
+                    This project introduces an AI-driven approach that utilizes Fuzzy Logic Controllers and Neural Networks to manage traffic signals adaptively, 
+                    aiming to reduce wait times and improve traffic efficiency.
                   </p>
                 </div>
                 <a
@@ -150,12 +150,12 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">🧠 MeVo — Smart Medical Management with Face Recognition</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    MeVo is an Android-based healthcare management app that leverages facial recognition to streamline patient identification and improve clinical operations. 
+                    Designed for hospitals and clinics, MeVo enables staff to efficiently manage appointments, 
+                    medicine inventory, and room allocations — all in one intuitive mobile platform.
                   </p>
                 </div>
                 <a
@@ -202,11 +202,11 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">RHCMS - Rural Housing Construction Management System</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                    RHCMS is a smart, multi-platform solution built to digitize and streamline institutional workflows. Designed as part of a Smart India Hackathon initiative, 
+                    it includes a web-based admin panel and a companion Android client that work together to manage users, records, and institutional operations efficiently.
                   </p>
                 </div>
                 <a
@@ -281,10 +281,10 @@
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/sarvesh-kumar-2ab49a2b1" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/sarvesh-x" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -293,9 +293,9 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
+          © 2025 - Portfolio developed by
+          <a rel="noreferrer" href="https://github.com/sarvesh-x" target="_blank"
+            >Sarvesh</a
           >
         </p>
 
@@ -304,7 +304,7 @@
           <a
             rel="noreferrer"
             class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
+            href="https://github.com/sarvesh-x/Portfolio/fork"
             data-icon="octicon-repo-forked"
             data-size="large"
             data-show-count="true"
@@ -314,11 +314,11 @@
           <a
             rel="noreferrer" 
             class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
+            href="https://github.com/sarvesh-x/Portfolio"
             data-icon="octicon-star"
             data-size="large"
             data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
+            aria-label="Star sarvesh-x/Portfolio on GitHub"
             >Star</a
           >
         </p>
